--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
+    "react-simple-wysiwyg": "^3.2.2",
     "redux": "^5.0.1",
     "uuid": "^11.1.0"
   },
